@@ -25,6 +25,14 @@ from itools.types import FileName
 
 
 
+class Context(object):
+    """Used by 'traverse2' to control the traversal."""
+
+    def __init__(self):
+        self.skip = False
+
+
+
 class Resource(object):
     """
     There are two types of resources, files and folders. The generic API for
@@ -289,6 +297,24 @@ class Folder(Resource):
                     yield x
             else:
                 yield resource
+
+
+    def traverse2(self, context=None):
+        if context is None:
+            context = Context()
+
+        yield self, context
+        if context.skip is True:
+            context.skip = False
+        else:
+            for resource in self.get_resources():
+                if isinstance(resource, Folder):
+                    for x, context in resource.traverse2(context):
+                        yield x, context
+                else:
+                    yield resource, context
+                    if context.skip is True:
+                        context.skip = False
 
 
     ######################################################################
