@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-09-29 17:06:26 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-112
+
+    Summary:
+      resources, add "traverse2" to the API (new feature)
+    Revision:
+      itools--main--0.9--patch-112
+
+
+    modified files:
+     Changelog resources/base.py
+
+
 2005-08-31 17:25:47 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-111
 
     Summary:
